fix profile page overflow

--- a/common/static/sass/_MainSection.sass
+++ b/common/static/sass/_MainSection.sass
@@ -561,6 +561,8 @@ $mark-review-padding-wider: 6px 0
 
 .calendar_view
 	position: relative
+	margin-left: -8px;
+	margin-right: -24px;
 
 // Medium devices (tablets, 768px and up)
 @media (max-width: $medium-devices)
